src/test/deca/codegen/invalid/errors/invalidCast.deca
// Description :
//    Test d'un cast invalide
//
// Resultats :
//    Error: Failed to cast variable of type 'A' to class 'B'

class A {

}

class B extends A {

}

{
    A a = new A();
    B b = (B)(a);
}
